--- a/sld.html
+++ b/sld.html
@@ -2,75 +2,56 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>IEC SLD Viewer</title>
+<title>HT Panel IEC SLD</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body{
-  font-family:Arial, sans-serif;
+  font-family:Arial;
   margin:0;
   background:#f2f6ff;
 }
 
-/* ===== HEADER ===== */
 .header-bar{
   position:sticky;
   top:0;
-  z-index:1000;
   background:#003f88;
   color:white;
-  display:flex;
-  align-items:center;
-  gap:10px;
   padding:12px;
+  display:flex;
+  gap:10px;
+  align-items:center;
 }
 
 .header-bar button{
   background:white;
   color:#003f88;
   border:none;
+  padding:6px 12px;
   border-radius:6px;
-  padding:8px 12px;
-  font-size:16px;
   cursor:pointer;
 }
 
 .header-title{
   flex:1;
   text-align:center;
-  font-size:22px;
-  font-weight:700;
+  font-weight:bold;
 }
 
-/* ===== CANVAS ===== */
 .container{ padding:15px; }
-
-.card{
-  background:white;
-  border-radius:10px;
-  box-shadow:0 2px 6px rgba(0,0,0,0.15);
-  padding:15px;
-}
 
 #wrap{
   height:560px;
-  overflow:hidden;
-  border:1px solid #ccc;
   background:white;
+  border:1px solid #ccc;
 }
 
-#sld{
-  width:100%;
-  height:100%;
-}
-
-/* ===== IEC STYLES ===== */
-.busbar{
+.bus{
   stroke:#000;
   stroke-width:6;
 }
 
-.power-flow{
+.power{
   stroke:#00cc44;
   stroke-width:4;
   stroke-dasharray:10 6;
@@ -78,28 +59,12 @@ body{
 }
 
 @keyframes flow{
-  from{stroke-dashoffset:0;}
-  to{stroke-dashoffset:-30;}
+  to{ stroke-dashoffset:-30; }
 }
-
-.breaker{
-  fill:white;
-  stroke:black;
-  stroke-width:2;
-}
-
-.breaker.on{ fill:#c8f7c5; }
-.breaker.off{ fill:#ffd6d6; }
 
 .label{
   font-size:11px;
   text-anchor:middle;
-}
-
-.info{
-  font-weight:bold;
-  color:#003f88;
-  margin-bottom:8px;
 }
 </style>
 </head>
@@ -107,39 +72,26 @@ body{
 <body>
 
 <div class="header-bar">
-  <button onclick="goHome()">🏠 Home</button>
-  <button onclick="goBack()">⬅ Back</button>
-  <div class="header-title" id="title">IEC SLD</div>
+  <button onclick="history.back()">⬅ Back</button>
+  <button onclick="location.href='https://08electricaldata.github.io/'">🏠 Home</button>
+  <div class="header-title" id="title">HT PANEL SLD</div>
 </div>
 
 <div class="container">
-  <div class="card">
-    <div class="info" id="info">Loading...</div>
-    <div id="wrap">
-      <svg id="sld" viewBox="0 0 1600 700"></svg>
-    </div>
+  <div id="wrap">
+    <svg id="sld" viewBox="0 0 1600 700"></svg>
   </div>
 </div>
 
 <script>
-// ================= CONFIG =================
+
+// ===== CONFIG =====
 const JSON_URL =
 "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/sld/boards_sld.json";
 
-// ================= NAV =================
-function goHome(){ location.href="https://08electricaldata.github.io/"; }
-function goBack(){ history.back(); }
-
-// ================= URL =================
-function getParam(n){
-  return new URL(window.location.href).searchParams.get(n);
-}
-
-// ================= SVG CORE =================
 const svg=document.getElementById("sld");
 
-function clearSVG(){ svg.innerHTML=""; }
-
+// ===== helpers =====
 function line(x1,y1,x2,y2,cls=""){
   const l=document.createElementNS("http://www.w3.org/2000/svg","line");
   l.setAttribute("x1",x1);
@@ -150,65 +102,28 @@ function line(x1,y1,x2,y2,cls=""){
   svg.appendChild(l);
 }
 
-function text(x,y,str){
-  const t=document.createElementNS("http://www.w3.org/2000/svg","text");
-  t.setAttribute("x",x);
-  t.setAttribute("y",y);
-  t.setAttribute("class","label");
-  t.textContent=str;
-  svg.appendChild(t);
+function text(x,y,t){
+  const el=document.createElementNS("http://www.w3.org/2000/svg","text");
+  el.setAttribute("x",x);
+  el.setAttribute("y",y);
+  el.setAttribute("class","label");
+  el.textContent=t;
+  svg.appendChild(el);
 }
 
-/* ===== IEC BREAKER SYMBOL ===== */
-function drawBreaker(x,y,label,status="ON"){
+function breaker(x,y,label){
 
-  const g=document.createElementNS("http://www.w3.org/2000/svg","g");
+  // vertical contacts
+  line(x,y-20,x,y-8,"");
+  line(x,y+8,x,y+20,"");
 
-  // upper contact
-  const l1=document.createElementNS("http://www.w3.org/2000/svg","line");
-  l1.setAttribute("x1",x);
-  l1.setAttribute("y1",y-22);
-  l1.setAttribute("x2",x);
-  l1.setAttribute("y2",y-10);
-  l1.setAttribute("stroke","#000");
-  l1.setAttribute("stroke-width","2");
+  // blade
+  line(x-10,y,x+10,y,"");
 
-  // lower contact
-  const l2=document.createElementNS("http://www.w3.org/2000/svg","line");
-  l2.setAttribute("x1",x);
-  l2.setAttribute("y1",y+10);
-  l2.setAttribute("x2",x);
-  l2.setAttribute("y2",y+22);
-  l2.setAttribute("stroke","#000");
-  l2.setAttribute("stroke-width","2");
-
-  // moving contact
-  const blade=document.createElementNS("http://www.w3.org/2000/svg","line");
-  blade.setAttribute("x1",x-10);
-  blade.setAttribute("y1",y);
-  blade.setAttribute("x2",x+10);
-  blade.setAttribute("y2",y);
-  blade.setAttribute("stroke","#000");
-  blade.setAttribute("stroke-width","3");
-
-  // label
-  const lbl=document.createElementNS("http://www.w3.org/2000/svg","text");
-  lbl.setAttribute("x",x);
-  lbl.setAttribute("y",y+36);
-  lbl.setAttribute("class","label");
-  lbl.textContent=label||"";
-
-  g.appendChild(l1);
-  g.appendChild(l2);
-  g.appendChild(blade);
-  g.appendChild(lbl);
-  svg.appendChild(g);
+  text(x,y+34,label||"");
 }
 
-/* ===== IEC TRANSFORMER ===== */
-function drawTransformer(x,y,name){
-
-  const g=document.createElementNS("http://www.w3.org/2000/svg","g");
+function transformer(x,y,name){
 
   const c1=document.createElementNS("http://www.w3.org/2000/svg","circle");
   c1.setAttribute("cx",x-12);
@@ -224,108 +139,88 @@ function drawTransformer(x,y,name){
   c2.setAttribute("stroke","#000");
   c2.setAttribute("fill","none");
 
-  const lbl=document.createElementNS("http://www.w3.org/2000/svg","text");
-  lbl.setAttribute("x",x);
-  lbl.setAttribute("y",y+28);
-  lbl.setAttribute("class","label");
-  lbl.textContent=name||"TR";
+  svg.appendChild(c1);
+  svg.appendChild(c2);
 
-  g.appendChild(c1);
-  g.appendChild(c2);
-  g.appendChild(lbl);
-  svg.appendChild(g);
+  text(x,y+26,name||"TR");
 }
 
-// ================= LOAD =================
-async function loadSLD(){
+// ===== load =====
+function getParam(n){
+  return new URL(location.href).searchParams.get(n);
+}
+
+async function load(){
 
   const id=getParam("id");
+  if(!id) return;
 
-  if(!id){
-    info.innerText="❌ Board id missing";
-    return;
-  }
-
-  title.innerText=id+" — IEC SLD";
+  title.innerText=id+" — Panel SLD";
 
   const res=await fetch(JSON_URL);
   const data=await res.json();
-  const board=data.boards?.[id];
+  const board=data.boards[id];
 
-  if(!board){
-    info.innerText="❌ Board not found";
-    return;
-  }
-
-  info.innerText=
-    `Incomers: ${board.topology.totalIncomers} | Bus: ${board.topology.busSections.join(", ")}`;
+  if(!board) return;
 
   draw(board);
 }
 
-// ================= DRAW ENGINE =================
+// ===== main draw =====
 function draw(board){
 
-  clearSVG();
+  svg.innerHTML="";
 
+  const BUS_Y=300;
   const W=1600;
 
-  // ===== BUS A =====
-  line(120,300,W-120,300,"busbar");
+  // ===== MAIN BUS =====
+  line(120,BUS_Y,W-120,BUS_Y,"bus");
 
-  // ===== BUS B =====
-  if(board.topology.busSections.includes("B")){
-    line(120,380,W-120,380,"busbar");
+  // ===== BUS COUPLER (CENTER) =====
+  if(board.busCouplers?.length){
+    const x=W/2;
+    breaker(x,BUS_Y,board.busCouplers[0].breakerId);
   }
 
-  // ===== INCOMERS =====
+  // ===== INCOMERS (TOP) =====
   const incomers=[
     ...board.incomers,
     ...board.dgIncomers,
     ...board.emergencyIncomers
   ];
 
-  const sp=W/(incomers.length+1);
+  const incSpacing=W/(incomers.length+1);
 
   incomers.forEach((inc,i)=>{
-    const x=sp*(i+1);
-    const busY=(inc.bus==="B")?380:300;
 
-    line(x,140,x,busY-24,"power-flow");
-    drawBreaker(x,busY-40,inc.breakerId,"ON");
-    drawTransformer(x,110,inc.source||"SRC");
+    const x=incSpacing*(i+1);
+
+    // vertical drop
+    line(x,160,x,BUS_Y-20,"power");
+
+    // breaker
+    breaker(x,BUS_Y-40,inc.breakerId);
+
+    // transformer
+    transformer(x,130,inc.source);
   });
 
-  // ===== BUS COUPLER =====
-  if(board.busCouplers?.length){
-    const x=W/2;
-    line(x,300,x,380,"power-flow");
-    drawBreaker(x,340,board.busCouplers[0].breakerId,"ON");
-  }
-
-  // ===== OUTGOINGS =====
-  const osp=W/(board.outgoings.length+1);
+  // ===== OUTGOINGS (BOTTOM) =====
+  const outSpacing=W/(board.outgoings.length+1);
 
   board.outgoings.forEach((o,i)=>{
-    const x=osp*(i+1);
-    const busY=(o.bus==="B")?380:300;
 
-    line(x,busY+24,x,560,"");
-    drawBreaker(x,busY+40,o.breakerId,"ON");
+    const x=outSpacing*(i+1);
+
+    // drop down
+    line(x,BUS_Y+20,x,520,"");
+
+    breaker(x,BUS_Y+40,o.breakerId);
   });
 }
 
-// ================= ZOOM =================
-let scale=1;
-sld.addEventListener("wheel",(e)=>{
-  e.preventDefault();
-  scale+=e.deltaY*-0.001;
-  scale=Math.min(Math.max(.6,scale),2);
-  sld.style.transform=`scale(${scale})`;
-});
-
-// ================= START =================
-loadSLD();
+load();
 </script>
 
 </body>
